# cam-vis

./: .gitignore  Cargo.toml  README.md
src/: cam.rs  cli.rs  demosaic.rs  events.rs  fs.rs  fs2.rs  fs2_5.rs  main.rs  rggb.rs  shaders.rs  vs.rs  vs2.rs
src/shaders/: fs.glsl  fs2.glsl  fs3.glsl  vs.glsl  vs2.glsl
