[package]
name = "cam-vis"
version = "0.1.0"
authors = ["Artyom Pavlov<newpavlov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Simple camera visualization tool"
documentation = "https://docs.rs/cam-vis"
repository = "https://github.com/SkoltechRobotics/cam-vis"

[dependencies]
#vulkano = "0.9"
#vulkano-win = "0.9"
#vulkano-shader-derive = "0.9"
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shader-derive = { git = "https://github.com/vulkano-rs/vulkano" }
winit = "0.16"
rscam = "^0.5.4"
