[package]
name = "cam-vis"
version = "0.1.0"
authors = ["Artyom Pavlov<newpavlov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Simple camera visualization tool"
documentation = "https://docs.rs/cam-vis"
repository = "https://github.com/SkoltechRobotics/cam-vis"

[dependencies]
vulkano = "0.10"
vulkano-win = "0.10"
vulkano-shader-derive = "0.10"
winit = "0.17"
rscam = "^0.5.4"
